# wooden-crumbs

./: LICENSE  README.md
Debs/: FunctionOne.cpp  Lab0.cpp  Lab1.cpp  SortThemArr.cpp  TargetCheck.cpp
university-homework/: CMakeLists.txt  MatrixForLife.cpp  OneDimArray.cpp  README.md  Testing.cpp
university-homework/OOP/: Appl.cpp  Lab5.cpp
