cmake_minimum_required(VERSION 3.27)
project(Debs)

set(CMAKE_CXX_STANDARD 17)

add_executable(Debs TargetCheck.cpp
        OneDimArray.cpp
        SortThemArr.cpp
        MatrixForLife.cpp
        FunctionOne.cpp
        Lab0.cpp
        Lab1.cpp
        Testing.cpp
        OOP/Lab5.cpp
        OOP/Appl.cpp
)
