cmake_minimum_required(VERSION 3.27)
project(university-homework)

set(CMAKE_CXX_STANDARD 17)

add_executable(university-homework
        TargetCheck.cpp
        OneDimArray.cpp
        SortThemArr.cpp
        MatrixForLife.cpp
        FunctionOne.cpp
        Lab0.cpp
        Lab1.cpp
        Testing.cpp
        OOP/Lab5.cpp
        OOP/Appl.cpp
)
